--- a/package.json
+++ b/package.json
@@ -23,18 +23,18 @@
     "url": "https://github.com/PhamQuan19/nodejs_blog/issues"
   },
   "homepage": "https://github.com/PhamQuan19/nodejs_blog#readme",
-  "lint-staged":{
-    "src/**/*.{js,json,scss}":"prettier --single-quote --trailing-comma all --tab-width 4 --write"
+  "lint-staged": {
+    "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all --tab-width 4 --write"
   },
-
-  "husky":{
-    "hooks":{
-      "pre-commit":"lint-staged"
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
     }
   },
   "dependencies": {
     "express": "^4.18.2",
-    "express-handlebars": "^7.1.2"
+    "express-handlebars": "^7.1.2",
+    "mongoose": "^7.5.2"
   },
   "devDependencies": {
     "husky": "^8.0.3",
